--- a/translations/Polski.json
+++ b/translations/Polski.json
@@ -357,7 +357,7 @@
 	"Forums": "Forum",
 	"Language": "Język",
 	"Theme": "Tło/Motyw",
-	"Search...": "Szukaj...",
+	"Search...": "Szukaj....",
 	"Updating Discord Bot Maker Project!": "Aktualizowanie Projektu DBM!",
 	"Please wait a couple minutes.": "Poczekaj kilka minut.",
 	"You can invite your bot to a server using the link below, or customize your own here:": "Możesz zaprosić swojego bota na serwer za pomocą poniższego linku lub dostosować własne:",
